--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
