--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
